--- a/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.css
+++ b/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.css
@@ -3,12 +3,14 @@
     box-sizing: border-box;
     display: flex;
     height: 100%;
-    align-items: center;
+    width: 100%;
+    align-content: start
 }
 
 .NavigationItem a {
     color: white;
     text-decoration: none;
+    width:100%;
     height: 100%;
     padding: 16px 10px;
     border-bottom: 4px solid transparent;
