--- a/src/components/Navigation/NavigationItems/NavigationItems.css
+++ b/src/components/Navigation/NavigationItems/NavigationItems.css
@@ -3,6 +3,6 @@
     padding: 0;
     list-style: none;
     flex-flow: column;
-    align-items: center;
+    align-items: start;
     height: 100%;
 }
