--- a/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.css
+++ b/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.css
@@ -22,6 +22,6 @@
 .NavigationItem a:active,
 .NavigationItem a.active {
     background-color: #000080;
-    border-bottom: 4px solid black;
+    border-bottom: 4px solid white;
     color: white;
 }
