Leaderboard player objects almost done

--- a/src/pages/Leaderboard/Leaderboard.css
+++ b/src/pages/Leaderboard/Leaderboard.css
@@ -1,7 +1,8 @@
 .Leaderboard{
-    align-items: center;
+    align-items: start;
     display: flex;
     flex-flow: column;
+    margin-top: 55px;
 }
 
 .Toolbar{
