--- a/src/pages/Leaderboard/LeaderboardPlayer/LeaderboardPlayer.css
+++ b/src/pages/Leaderboard/LeaderboardPlayer/LeaderboardPlayer.css
@@ -1,11 +1,36 @@
 .LeaderboardPlayer {
     color: black;
     text-decoration: none;
+    padding: 20px 0px;
+    background-color: #B5CFE7;
+    border-left: 10px solid #0071BC;
+}
+
+.Logo {
+    height: 50px;
+    width: 20px;
+    margin-right: 20px;
+}
+
+.Logo img {
+    height: 30px;
+    width: 30px;
+}
+
+.NameRank {
     font-size: 30px;
-    width:90%;
-    height: 100%;
-    padding: 20px 10px;
-    background-color: aqua;
-    box-sizing: border-box;
-    display: block;
+    padding: 0px 20px;
+    margin-right: 10px;
+    vertical-align: middle;
+}
+
+.Profile {
+    border-left: 5px solid black;
+    font-size: 15px;
+    vertical-align: middle;
+}
+
+.Challenge {
+    text-decoration-color: blue;
+    font-size: 15px;
 }
