--- a/src/components/Navigation/Toolbar/Toolbar.css
+++ b/src/components/Navigation/Toolbar/Toolbar.css
@@ -1,10 +1,10 @@
 .Toolbar {
     height: 56px;
     width: 100%;
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
-    background-color: #6666ff;
+    background-color: rgba(115, 74, 179, 0.8);
     display: flex;
     justify-content: space-between;
     padding: 0 20px;
