--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -3,21 +3,34 @@
 	width: 100%;
     height: 100%;
     text-align: center;
-    background: url('../../assets/images/login-bg.jpg') no-repeat center center fixed;
+    background: url('../../assets/images/a-reception.jpg') no-repeat center center fixed;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     box-sizing: border-box;
-    display: flex;
     align-items: flex-end;
 }
 
 .welcomeBox {
-	border-radius: 10px;
+	border-radius: 25px;
 	background: rgba(115, 74, 179, 0.6);
     text-align: center;
-    width: 100%;
-    margin: 0 10px 10px;
+    align-items:center;
+    width: 33%;
+    margin: 100px 50px 10px 50px;
     padding: 15px;
-    min-height: 300px;
+    min-height: 500px;
+    float:right;
+    color: white;
+}
+
+.button {
+    background-color: #b784a7; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
 }
