--- a/src/pages/ReserveBoard/ReserveBoard.css
+++ b/src/pages/ReserveBoard/ReserveBoard.css
@@ -1,3 +1,14 @@
 .ReserveBoard{
-    margin-top: 30px;
+    display: flex;
+    flex-flow: column;
+    margin-top: 55px;
+}
+
+.Toolbar{
+    width: 100%;
+    display: flex;
+}
+
+button {
+	margin-top: 25px;
 }
