--- a/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.css
+++ b/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.css
@@ -21,7 +21,7 @@
 .NavigationItem a:hover,
 .NavigationItem a:active,
 .NavigationItem a.active {
-    background-color: #000080;
-    border-bottom: 4px solid white;
+    background-color: rgba(0,106,180,0.95);
+    font-size: 24px;
     color: white;
 }
