--- a/src/components/Navigation/SideDrawer/SideDrawer.css
+++ b/src/components/Navigation/SideDrawer/SideDrawer.css
@@ -6,7 +6,7 @@
     left: 0;
     top: 0;
     z-index: 200;
-    background-color: #000080;
+    background-color: rgba(0,106,180,0.95);
     padding: 32px 16px;
     box-sizing: border-box;
     transition: transform 0.3s ease-out;
