--- a/src/components/Navigation/Toolbar/Toolbar.css
+++ b/src/components/Navigation/Toolbar/Toolbar.css
@@ -4,7 +4,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    background-color: rgba(115, 74, 179, 0.8);
+    background-color: rgba(1,173,233, 0.8);
     display: flex;
     justify-content: space-between;
     padding: 0 20px;
